syntax = "proto3";

package user;
option go_package="./user";

message Request {
  string ping = 1;
}

message Response {
  string pong = 1;
}
message UserInfo{

}
message UserId{

}
message UserRole{

}
message FindAll{

}

message AllUser{

}
message UserRight{

}
message Right{

}
service User {
  rpc AddUser(UserInfo) returns (Response) {}
  rpc DeleteUser(UserId) returns (Response) {}
  rpc UpdateUser(UserInfo) returns (Response) {}
  rpc FindUserByID(UserId) returns (UserInfo) {}
  rpc FindAllUser(FindAll) returns (AllUser) {}


  rpc AddRole(UserRole) returns (Response) {}
  rpc DeleteRole(UserRole) returns (Response) {}
  rpc UpdateRole(UserRole) returns (Response) {}

  rpc IsRight(UserRight) returns (Right) {}
}
